error.txt
PS D:\GitHub\04842\Vietnam> npm run build

> gatsby-starter-default@0.1.0 build
> gatsby build

success compile gatsby files - 1.999s
success load gatsby config - 0.073s

 ERROR  UNKNOWN

Error in "D:/GitHub/04842/Vietnam/gatsby-node": await is only valid in async functions and the top level bodies of modules



  Error: D:\GitHub\04842\Vietnam\gatsby-node.js:323
    const blogResult = await graphql(`
                       ^^^^^
  SyntaxError: await is only valid in async functions and the top level bodies of modules

  - vm:76 internalCompileFunction
    node:internal/vm:76:18

  - loader:1283 wrapSafe
    node:internal/modules/cjs/loader:1283:20

  - loader:1328 Module._compile
    node:internal/modules/cjs/loader:1328:27

  - loader:1422 Object.Module._extensions..js
    node:internal/modules/cjs/loader:1422:10

  - loader:1203 Module.load
    node:internal/modules/cjs/loader:1203:32

  - loader:1019 Function.Module._load
    node:internal/modules/cjs/loader:1019:12

  - translators:203 ModuleWrap.<anonymous>
    node:internal/modules/esm/translators:203:29

  - module_job:195 ModuleJob.run
    node:internal/modules/esm/module_job:195:25

  - loader:337 ModuleLoader.import
    node:internal/modules/esm/loader:337:24

  - module:432 importModuleDynamicallyWrapper
    node:internal/vm/module:432:15

  - resolve-module-exports.ts:218 resolveModuleExports
    [Vietnam]/[gatsby]/src/bootstrap/resolve-module-exports.ts:218:33

  - validate.ts:464 collatePluginAPIs
    [Vietnam]/[gatsby]/src/bootstrap/load-plugins/validate.ts:464:31

  - index.ts:64 loadPlugins
    [Vietnam]/[gatsby]/src/bootstrap/load-plugins/index.ts:64:42

  - initialize.ts:203 initialize
    [Vietnam]/[gatsby]/src/services/initialize.ts:203:28

  - index.ts:48 bootstrap
    [Vietnam]/[gatsby]/src/bootstrap/index.ts:48:9

  - build.ts:138 build
    [Vietnam]/[gatsby]/src/commands/build.ts:138:5


not finished load plugins - 0.859s      